# nano-banana-3d

./: README.md
banana3d-client/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
banana3d-client/src/: App.css  App.tsx  index.css
banana3d-client/src/components/: ModelViewer.tsx
banana3d-server/: .env  .env.example  .gcloudignore  bananaGen.py  dockerfile  falGen3d.py  main.py  pyproject.toml  requirements.txt  utils.py
