[project]
name = "banana3d-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fal-client>=0.7.0",
    "flask[async]>=3.1.2",
    "flask-cors>=6.0.1",
    "google-genai>=1.33.0",
    "ipython>=9.5.0",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "hypercorn>=0.17.3",
]
